/_/ |_|/_____//_____/ \____/ \____//_/ /_/ /_//____//_____//_/     \____/   
_________________________________________


RBDOOM-3-BFG Release Notes - https://github.com/RobertBeckebans/RBDOOM-3-BFG

Thank you for downloading RBDOOM-3-BFG.



_______________________________________

TBD - RBDOOM-3-BFG 1.1.0
_______________________________

- True 64 bit HDR lighting with adaptive filmic tone mapping

- Enhanced Subpixel Morphological Antialiasing
	For more information see "Anti-Aliasing Methods in CryENGINE 3" and the docs at http://www.iryoku.com/smaa/

- Filmic post process effects like Technicolor color grading and film grain

- Fixed issues with Mesa drivers and allowed them to use shadow mapping

- Defaulted fs_resourceLoadPriority to 0 so it is not necessary anymore to specify when running a modification

- Additional ambient render pass to make the game less dark similar to the Quake 4 r_forceAmbient technique



_______________________________________

7 March 2015 - RBDOOM-3-BFG 1.0.3
_______________________________

- SDL 2 is the default for Linux

- CMake options like -DUSE_SYSTEM_LIBJPEG to aid Linux distribution package maintainers

- SDL gamepad support and other SDL input improvements like support for more mouse buttons

- Mac OS X support (experimental)

- XAudio 2, Windows 8 SDK fixes

- Better Mesa support (not including advanced shadow mapping)

- Added back dmap and aas compilers (mapping tools)

- Cinematic sequences can be skipped

- Localization support for other languages than English

- Improved modding support through loading of custom models and animations (see section 12 MODIFICATIONS in the README)



_______________________________________

17 May 2014 - RBDOOM-3-BFG 1.0.2

RBDOOM-3-BFG-1.0.2-ATI-hotfix1-win32-20140517-git-952907f.7z
_______________________________

This release doubles the shadow mapping performance and allows the game to be played at solid 120 fps in 1080p with a Nvidia GTX 660 Ti.