@@ -303,7 +303,7 @@ __________________________________________
 - Changed light interaction shaders to use Half-Lambert lighting like in Half-Life 2 to 
 	make the game less dark. https://developer.valvesoftware.com/wiki/Half_Lambert
 
-- True 64 bit HDR lighting with adaptive tone mapping
+- True 64 bit HDR lighting with adaptive tone mapping and gamma-correct rendering in linear RGB space
 
 - Enhanced Subpixel Morphological Antialiasing
 	For more information see "Anti-Aliasing Methods in CryENGINE 3" and the docs at http://www.iryoku.com/smaa/
@@ -321,7 +321,13 @@ r_antiAliasing - Different Anti-Aliasing modes
 
 r_useShadowMapping [0 or 1] - Use soft shadow mapping instead of hard stencil shadows
 
-r_useHDR [0 or 1] - Use High Dynamic Range lighting with adaptive tone mapping
+r_useHDR [0 or 1] - Use High Dynamic Range lighting
+
+r_hdrAutoExposure [0 or 1] - Adaptive tonemapping with HDR
+	This allows to have very bright or very dark scenes but the camera will adopt to it so the scene won't loose details
+	
+r_exposure [0 .. 1] - Default 0.5, Controls brightness and affects HDR exposure key
+	This is what you change in the video brightness options
 
 r_useFilmicPostProcessEffects [0 or 1] - Apply several post process effects to mimic a filmic look"
 
@@ -331,9 +337,12 @@ ___________________________________________________
 10) KNOWN ISSUES
 __________________________________________
 
-Doom 3 wasn't designed to work with shadow maps so:
+- HDR does not work with old-school stencil shadows
+
+- MSAA antiliasing modes don't work with HDR: Use SMAA
 
 - Some lights cause shadow acne with shadow mapping
+
 - Some shadows might almost disappear due to the shadow filtering
 
 ___________________________________________________
